--- a/e-commerce-app/client/package.json
+++ b/e-commerce-app/client/package.json
@@ -21,11 +21,13 @@
     "primereact": "^7.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-image-gallery": "^1.2.7",
     "react-query": "^3.34.16",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
+    "swiper": "^8.0.7",
     "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
   },
